# aws-by-example

./: .gitignore  CONTRIBUTING.md  README.md  app.py  justfile  pyproject.toml
aws_by_example/: aws_by_example_stack.py
docs/: index.html  lambda_ephemeral_storage.html  lambda_layer_merging.html  lambda_scale_from_zero.html  lambda_who_what_where.html  sns_publish_permissions.html
lib/: lambda_ephemeral_storage_stack.py  lambda_layer_merging_stack.py  lambda_responses_and_logs_stack.py  lambda_retries_stack.py  lambda_scale_from_zero_stack.py  lambda_who_what_where_stack.py  sns_publish_permissions_stack.py
lib/resources/layers/requests-2-30/python/charset_normalizer/: api.py  cd.py  constant.py  legacy.py  models.py
lib/resources/layers/requests-2-30/python/charset_normalizer-3.4.6.dist-info/: RECORD
lib/resources/layers/requests-2-30/python/requests-2.30.0.dist-info/: RECORD
lib/resources/layers/requests-2-31/python/charset_normalizer/: md.py  utils.py
lib/resources/layers/requests-2-31/python/idna/: core.py
lib/resources/layers/requests-2-31/python/urllib3/: _collections.py  _request_methods.py  connection.py  exceptions.py  fields.py  poolmanager.py  response.py
notebooks/: lambda_ephemeral_storage.py  lambda_layer_merging.py  lambda_responses_and_logs.py  lambda_retries.py  lambda_scale_from_zero.py  lambda_who_what_where.py  sns_publish_permissions.py
notebooks/exports/: lambda_responses_and_logs.html  lambda_retries.html  sns_publish_permissions.html
scripts/: make_index.py
templates/: index.jinja
tests/unit/: test_aws_by_example_stack.py
(+11 files in other folders)
